--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Ivan Vargas's Website </h1>
-<h2>Go to my course link</h2>
+<h2>Go to my course link <a href = "https://ivanvc2023.github.io/itis3135/" > Course Link</a></h2>
