--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,15 @@
-<h1>Ivan Vargas's Imaginary Vulture - ITIS 3135 </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ivan Vargas || ITIS 3135 Homepage</title>
+</head>
+<body>
+    <header>
+        <h1>Ivan Vargas || ITIS 3135</h1>
+        <href = "./"
+    </header>
+    
+</body>
+</html>
