--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Personal Webpage | UNC Charlotte</title>
-		<h2 style = "text-align: center;"></h2><a href = "itis3135/"> Click to go to ITIS3135 Site</a>
+		<h2 style = "text-align: center;"></h2><a href = "C:\Users\ivanv\OneDrive\Documents\GitHub\IvanVC2023.github.io\itis3135\index.html"> Click to go to ITIS3135 Site</a>
 		<style type="text/css">
 			body {
 				background-color: #FFFFFF;
